# resistance-miner

./: .gitignore  Dockerfile  Makefile.am  NEWS  README  configure.ac  cpu-miner.c  miner.h  res-yespower.c  sugarmaker.1  util.c
debian/: resistance-miner.install  rules
